# tictactoe

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  revision_data.h.in.cmake
benchmark/: CMakeLists.txt  square_bench.cpp
cmake/: genrev.cmake
dependencies/: CMakeLists.txt
docs/: CMakeLists.txt  conf.py  index.rst  requirements.txt
examples/: CMakeLists.txt  example1.cpp
src/: CMakeLists.txt  CMakeLists.txt.autosave  Symbolic.cpp  Symbolic.h  main.cpp  math.cpp  math.h  symbolic.cpp  symbolic.h
src/functions/: my_header.h  my_source.cpp
tests/: CMakeLists.txt  add_test.h  mult_test.h  my_test_test.cpp  square_test.cpp  symbolic_test.cpp
